--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,14 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  # google_maps_flutter_platform_interface: ^2.2.4
+  google_maps_flutter: ^2.1.1
+  google_maps_flutter_web: ^0.4.0+3
+  search_cep: ^4.0.1
+  geocode: ^1.0.2
+  flutter_mobx: ^2.0.6+5
+  cpf_cnpj_validator: ^2.0.0
+
 
 dev_dependencies:
   flutter_test:
